--- a/src/app/contato/contato.component.html
+++ b/src/app/contato/contato.component.html
@@ -552,7 +552,7 @@
                       alt="card image"
                     />
                   </p>
-                  <h4 class="card-title">Sotiè Bustos Dele</h4>
+                  <h4 class="card-title">Sotiè Ghislain</h4>
                   <p class="card-text"></p>
                 </div>
               </div>
@@ -560,8 +560,8 @@
             <div class="backside">
               <div class="card">
                 <div class="card-body text-center mt-4">
-                  <h4 class="card-title">Dev Fullstack</h4>
-                  <p class="card-text">Sou de nacional do Benin, tendo francês fluente. <br> Desenvolvedor Full Stack, apaixonado pela tecnologia.</p>
+                  <h4 class="card-title">Scrum master</h4>
+                  <p class="card-text">Desenvolvedor Fullstack e francês fluente. <br> Apaixionado por pessoas e tecnologia.</p>
                   <ul class="list-inline">
                     <li class="list-inline-item">
                       <a
